Remove super call and refactor code
We don't want to call super as heroes shouldn't call zombie reinforcement